updated readme and notes

--- a/notes/references.bib
+++ b/notes/references.bib
@@ -19,3 +19,17 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-2001-04385.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+
+Hamiltonian Neural Networks Paper
+
+
+@article{Greydanus2019HamiltonianNN,
+  title={Hamiltonian Neural Networks},
+  author={S. Greydanus and Misko Dzamba and J. Yosinski},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1906.01563}
+  url={https://www.semanticscholar.org/paper/Hamiltonian-Neural-Networks-Greydanus-Dzamba/bb758228488bd5a67a8bc7369bf090b3d2bc4cc3}
+}
